@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.1984 2006/12/09 14:07:25 obache Exp $
+$NetBSD: CHANGES-2006,v 1.1985 2006/12/09 16:20:56 adam Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -5598,3 +5598,10 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated security/audit-packages to 1.46 [adrianp 2006-12-09]
 	Updated devel/libntlm to 0.3.12 [obache 2006-12-09]
 	Updated security/gsasl to 0.2.15 [obache 2006-12-09]
+	Added databases/postgresql82 version 8.2.0 [adam 2006-12-09]
+	Added databases/postgresql82-client version 8.2.0 [adam 2006-12-09]
+	Added databases/postgresql82-server version 8.2.0 [adam 2006-12-09]
+	Added databases/postgresql82-plperl version 8.2.0 [adam 2006-12-09]
+	Added databases/postgresql82-plpython version 8.2.0 [adam 2006-12-09]
+	Added databases/postgresql82-pltcl version 8.2.0 [adam 2006-12-09]
+	Added databases/postgresql82-tsearch2 version 8.2.0 [adam 2006-12-09]
